--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
     <div class="blog-title">blog title</div>
     <div class="nav">
         <div class="nav-links">
-            <a href="#">blog index</a>
+            <a href="{{ url_for('.index') }}">blog index</a>
             <a href="#">join mailing list</a>
         </div>
     </div>
@@ -17,4 +17,34 @@
     {% block page_content %}
 
     {% endblock %}
+
+    <div class="sidebar-container">
+        <div class="sidebar-box">
+            <h3>Recent Posts</h3>
+            <hr>
+            <ul>
+                <li><a href=#">Recent Post One</a></li>
+                <li><a href=#">Recent Post Two</a></li>
+                <li><a href=#">Recent Post Three</a></li>
+                <li><a href=#">Recent Post Four</a></li>
+                <li><a href=#">Recent Post Five</a></li>
+            </ul>
+        </div>
+        <div class="sidebar-box">
+            <h3>Categories</h3>
+            <hr>
+            <ul>
+                <li><a href="#">Category One</a></li>
+                <li><a href="#">Category One</a></li>
+                <li><a href="#">Category One</a></li>
+                <li><a href="#">Category One</a></li>
+                <li><a href="#">Category One</a></li>
+                <li><a href="#">Category One</a></li>
+                <li><a href="#">Category One</a></li>
+                <li><a href="#">Category One</a></li>
+                <li><a href="#">Category One</a></li>
+                <li><a href="#">Category One</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
