--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
 		    		<p>
                         {{ post.body }}
 		    		</p>
-		    			<a href="#" >Keep Reading</a>
+		    			<a href="{{ url_for('.post', id=post.id) }}">Keep Reading</a>
 		    	</div>
 		    	<hr>
             {% endfor %}
@@ -21,33 +21,4 @@
                 {{ macros.pagination_widget(pagination, '.index') }}
             </div>
      </div>
-    <div class="sidebar-container">
-        <div class="sidebar-box">
-            <h3>Recent Posts</h3>
-            <hr>
-            <ul>
-                <li><a href=#">Recent Post One</a></li>
-                <li><a href=#">Recent Post Two</a></li>
-                <li><a href=#">Recent Post Three</a></li>
-                <li><a href=#">Recent Post Four</a></li>
-                <li><a href=#">Recent Post Five</a></li>
-            </ul>
-        </div>
-        <div class="sidebar-box">
-            <h3>Categories</h3>
-            <hr>
-            <ul>
-                <li><a href="#">Category One</a></li>
-                <li><a href="#">Category One</a></li>
-                <li><a href="#">Category One</a></li>
-                <li><a href="#">Category One</a></li>
-                <li><a href="#">Category One</a></li>
-                <li><a href="#">Category One</a></li>
-                <li><a href="#">Category One</a></li>
-                <li><a href="#">Category One</a></li>
-                <li><a href="#">Category One</a></li>
-                <li><a href="#">Category One</a></li>
-            </ul>
-        </div>
-    </div>
 {% endblock %}
