--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -6,7 +6,11 @@
             <div class="post-info">
                 <h1>{{ post.title }}</h1>
                 <h2><a href="#">{{ post.author }}r</a>	<a href="#">{{ post.time}}</a></h2>
-                <h3>in <a href="#">tag1</a>, <a href="#">tag2</a>, <a href="#">tag3...</a></h3>
+                <h3>in
+                    {% for t in tags %}
+                    <a href="#">{{ t.name }}</a>,
+                    {% endfor %}
+                </h3>
             </div>
             <p>
                 {{ post.body }}
