--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,3 +22,11 @@
             </div>
      </div>
 {% endblock %}
+
+{% block recent_posts %}
+    {% include '_sidebar_posts.html' %}
+{% endblock %}
+
+{% block post_categories %}
+    {% include '_sidebar_categories.html' %}
+{% endblock %}
