--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -7,7 +7,7 @@
                 <h1>{{ post.title }}</h1>
                 <h2><a href="#">{{ post.author }}r</a>	<a href="#">{{ post.time}}</a></h2>
                 <h3>in
-                    {% for t in tags %}
+                    {% for t in post_tags %}
                     <a href="#">{{ t.name }}</a>,
                     {% endfor %}
                 </h3>
@@ -17,4 +17,12 @@
             </p>
         </div>
     </div>
+{% endblock %}
+
+{% block recent_posts %}
+    {% include '_sidebar_posts.html' %}
+{% endblock %}
+
+{% block post_categories %}
+    {% include '_sidebar_categories.html' %}
 {% endblock %}
