--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -61,7 +61,9 @@ hr {
 	float: left;
 	margin-top: 80px;
 }
-
+.post-container h1 {
+	font-family: "Noto Sans";
+}
 .post-preview {
 	outline-width: 0px;
 	outline-style: solid;
