--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -2,16 +2,22 @@
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     {{ ckeditor.load() }}
+    {{ ckeditor.config(name='body') }}
 {% endblock %}
 {% block title %}Blog Title{% endblock %}
 
 {% block page_content %}
     <div class="post-container">
         <form method="post">
-            {{ ckeditor.create() }}
-            <input type="submit">
+            <div id="title-form">
+                {{ form.title(placeholder="Post title...") }}
+            </div>
+            {{ form.body() }}
+            <div id="submit-post">
+                {{ form.submit() }}
+            </div>
         </form>
-    </div>
+</div>
 {% endblock %}
 
 {% block recent_posts %}
