--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -13,7 +13,7 @@
                 </h3>
             </div>
             <p>
-                {{ post.body }}
+                {{ post.body | safe  }}
             </p>
         </div>
     </div>
