--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,9 @@
 
 {% block page_content %}
      <div class="post-container">
+        <a href="{{ url_for('.new_post') }}" class="button">
+            New Post
+        </a>
             {% for post in posts %}
 		    	<div class="post-preview">
 		    		<div class="post-preview-info">
