--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -16,6 +16,9 @@
                 {{ post.body | safe  }}
             </p>
         </div>
+    <a href="{{ url_for('.edit', id=post.id) }}" class="button">
+        Edit Post
+    </a>
     </div>
 {% endblock %}
 
