--- a/app/templates/tagged.html
+++ b/app/templates/tagged.html
@@ -5,19 +5,7 @@
 {% block page_content %}
     <div class="post-container">
         <h1>Posts tagged "{{ tag }}"</h1>
-            {% for post in posts %}
-		    	<div class="post-preview">
-		    		<div class="post-preview-info">
-		    			<h1>{{ post.title }}</h1>
-		    			<h2><a href="#">{{ post.author }}</a>	<a href="#">{{ post.time}}</a></h2>
-		    		</div>
-		    		<p>
-                        {{ post.body | safe}}
-		    		</p>
-		    			<a href="{{ url_for('.post', id=post.id) }}">Keep Reading</a>
-		    	</div>
-		    	<hr>
-            {% endfor %}
+            {% include '_posts.html' %}
             <div class="pagination">
                 {{ macros.pagination_widget(pagination, '.tagged', tag = tag) }}
             </div>
