--- a/app/templates/_sidebar_posts.html
+++ b/app/templates/_sidebar_posts.html
@@ -2,8 +2,8 @@
     <h3>Recent Posts</h3>
     <hr>
     <ul>
-        {% for p in recent %}
-            <li><a href="{{ url_for('.post', id=p.id) }}">{{ p.title }}</a></li>
+        {% for p in recent() %}
+            <li><a href="{{ url_for('main.post', id=p.id) }}">{{ p.title }}</a></li>
         {% endfor %}
     </ul>
 </div>
