--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
     <div class="blog-title">blog title</div>
     <div class="nav">
         <div class="nav-links">
-            <a href="{{ url_for('.index') }}">blog index</a>
+            <a href="{{ url_for('main.index') }}">blog index</a>
             <a href="#">join mailing list</a>
         </div>
     </div>
