--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,13 +4,15 @@
 
 {% block page_content %}
      <div class="post-container">
-        <a href="{{ url_for('.new_post') }}" class="button">
-            New Post
-        </a>
-            {% include '_posts.html' %}
-            <div class="pagination">
-                {{ macros.pagination_widget(pagination, '.index') }}
-            </div>
+        {% if current_user.can(Permission.WRITE) %}
+            <a href="{{ url_for('.new_post') }}" class="button">
+                New Post
+            </a>
+        {% endif %}
+        {% include '_posts.html' %}
+        <div class="pagination">
+            {{ macros.pagination_widget(pagination, '.index') }}
+        </div>
      </div>
 {% endblock %}
 
