--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -16,9 +16,11 @@
                 {{ post.body | safe  }}
             </p>
         </div>
-    <a href="{{ url_for('.edit', id=post.id) }}" class="button">
-        Edit Post
-    </a>
+        {% if current_user.can(Permission.WRITE) %}
+        <a href="{{ url_for('.edit', id=post.id) }}" class="button">
+            Edit Post
+        </a>
+        {% endif %}
     </div>
 {% endblock %}
 
