--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,9 +10,12 @@
             </a>
         {% endif %}
         {% include '_posts.html' %}
-        <div class="pagination">
-            {{ macros.pagination_widget(pagination, '.index') }}
+        <div class="center">
+            <div class="pagination">
+                {{ macros.pagination_widget(pagination, '.index') }}
+            </div>
         </div>
+
      </div>
 {% endblock %}
 
