--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -89,7 +89,7 @@ hr {
 }
 
 .post-preview-info {
-	margin-bottom:10px
+	margin-bottom:0px;
 }
 
 .post-preview-info h1 {
@@ -231,16 +231,17 @@ hr {
 
 }
 
+.center {
+  text-align: center;
+}
+
 .pagination {
-  display: inline-block;
-  margin-left: 37%;
-  margin-top: 75px;
-  margin-bottom:75px;
+	display: inline-block;
+	margin: 20px 0px;
 }
 
 .pagination a {
   color: #3D0053;
-  float: left;
   padding: 4px 8px;
   text-decoration: none;
   transition: background-color .3s;
@@ -261,9 +262,9 @@ hr {
 }
 
 .pagination a.disabled {
-  background-color: #3D0053;
-  color: white;
-  border: 1px solid #3D0053;
+  background-color: white;
+  color: #3D0053;
+  border: 1px #3D0053;
 }
 
 #title-form input[type="text"],
@@ -312,8 +313,94 @@ hr {
 	text-align: center;
 	text-decoration: none;
 	float:right;
+	transition: background-color 0.4s;
+
 }
 
+.button:hover{
+	background-color: #F3219F;
+}
+/*
+.post-button span {
+	cursor: pointer;
+	transition: 0.4s;
+}
+
+.button span:after {
+  content: 'New Post';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+*/
 .login-button {
 	float:right;
+	background-color: #9721CE;
+	color: white;
+	font-family: "Noto Sans";
+	padding:10px;
+	font-weight: bold;
+	text-align: center;
+	text-decoration: none;
+	transition: background-color 0.4s;
+}
+
+.login-button:hover {
+	background-color: #F3219F;
+}
+#login-form {
+	width: 50%;
+	font-family: "Noto Sans";
+	margin:auto;
+
+}
+#login-form input[type="text"],
+#login-form input[type="password"] {
+	padding: 12px 20px;
+	width:100%;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #9721CEFF;
+	border-radius: 4px;
+	box-sizing: border-box;
+	display: block;
+	outline: none;
+
+}
+
+#login-form input[type="text"]:focus,
+#login-form input[type="password"]:focus {
+	border: 2px solid #F3219F;
+	padding: 11px 20px;
+}
+
+#login-form input[type="checkbox"] {
+
+
+}
+#login-form input[type="submit"] {
+	background-color: #9721CE;
+	color: white;
+	font-family: "Noto Sans";
+	padding:10px;
+	font-weight: bold;
+	text-align: center;
+	text-decoration: none;
+	border: 0;
+	display: block;
+	margin: 10px 0;
+	transition-duration: 0.4s;
+}
+
+#login-form input[type="submit"]:hover {
+	background-color: #F3219F;
+
+}
+
+.form-label {
+	font-family: "Noto Sans";
+	font-size:16px;
+	font-weight: bold;
 }
