--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -5,7 +5,7 @@
         <div class="post">
             <div class="post-info">
                 <h1>{{ post.title }}</h1>
-                <h2><a href="{{ url_for('.author', author=post.author) }}">{{ post.author }}</a>	<a href="#">{{ post.time}}</a></h2>
+                <h2><a href="{{ url_for('.author', author=post.author) }}">{{ post.author }}</a>	on {{post.time | time}}</h2>
                 <h3>in
                     {% for t in post_tags %}
                         <a href="{{ url_for('.tagged', tag=t.name) }}">{{ t.name }}</a>,
