--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -189,14 +189,14 @@ hr {
 	margin-top: 80px;
 	font-family: Basic;
 	background-color:#EDEDED;
+	margin-bottom: 60px;
 }
 
 .sidebar-container hr {
 	border:4px solid #F3219F;
 	padding: 0px;
-	margin: 0px;
 	width:33%;
-
+	margin: 0;
 }
 
 .sidebar-box {
@@ -241,29 +241,30 @@ hr {
 }
 
 .pagination a {
-  color: #3D0053;
-  padding: 4px 8px;
-  text-decoration: none;
-  transition: background-color .3s;
-  border: 1px solid #ddd;
-  margin: 0 4px;
-  background-color: #E1E1E1;
-  font-family: Basic;
+	color: #3D0053;
+	padding: 4px 8px;
+	text-decoration: none;
+	transition: background-color .3s;
+	border: 0px solid black;
+	margin: 0 4px;
+	background-color: white;
+	font-family: Basic;
 }
 
 .pagination a.active {
-  background-color: #3D0053;
+  background-color: #F3219F;
   color: white;
-  border: 1px solid #3D0053;
 }
 
 .pagination a:hover {
-	text-decoration: underline;
+	text-decoration: none;
+	background-color: #F3219F;
+	color: white;
 }
 
 .pagination a.disabled {
   background-color: white;
-  color: #3D0053;
+  color: black;
   border: 1px #3D0053;
 }
 
