--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -2,13 +2,13 @@
 <div class="pagination">
     <a href="{% if pagination.has_prev %}{{ url_for(endpoint,
             page = pagination.page - 1, **kwargs) }}{% else %}#{% endif %}"
-            {% if not pagination.has_next %} class="disabled" {% endif %}>
+            {% if not pagination.has_prev %} class="disabled" {% endif %}>
             &laquo;
     </a>
-    {% for p in pagination.iter_pages() %}
+    {% for p in pagination.iter_pages(right_current=3) %}
         {% if p %}
             {% if p == pagination.page %}
-                <a href="{{ url_for(endpoint, page = p, **kwargs) }}">{{ p }}</a>
+                <a href="{{ url_for(endpoint, page = p, **kwargs) }}" class="active">{{ p }}</a>
             {% else %}
                 <a href="{{ url_for(endpoint, page = p, **kwargs) }}">{{ p }}</a>
             {% endif %}
