--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html" %}1
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     {{ ckeditor.load() }}
