--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,18 @@
         </div>
     {% endblock %}
 
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="flash-messages">
+                <ul>
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+    {% endwith %}
+
     {% block page_content %}
 
     {% endblock %}
