--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -5,7 +5,11 @@
             <h2> <a href="{{ url_for('.author', author=post.author) }}">{{ post.author }}</a>	on {{ post.time | time }} </h2>
         </div>
         <p>
-            {{ post.body | safe | preview}}
+            {% if post.body_html %}
+                {{ post.body_html | safe | preview}}
+            {% else %}
+                {{ post.body }}
+            {% endif %}
         </p>
             <a href="{{ url_for('.post', id=post.id) }}">Keep Reading</a>
     </div>
