--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -13,7 +13,11 @@
                 </h3>
             </div>
             <p>
-                {{ post.body | safe  }}
+                {% if post.body_html %}
+                    {{ post.body_html | safe }}
+                {% else %}
+                    {{ post.body }}
+                {% endif %}
             </p>
         </div>
 
